# Freeze

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.sh
Freeze/: CMakeLists.txt  Core.hpp  Freeze.hpp  pch.hpp
Freeze/src/: Application.cpp  Application.hpp  EntryPoint.hpp  MeshManager.cpp  MeshManager.hpp  Window.cpp  Window.hpp
Freeze/src/EventSystem/: Base.hpp  Dispatcher.hpp  Event.hpp  EventHandler.cpp  EventHandler.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Freeze/src/OpenGL/: attributeLayout.cpp  attributeLayout.hpp  cameraControler.cpp  cameraController.hpp  indexBuffer.cpp  indexBuffer.hpp  main.cpp  misc.cpp  misc.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  time.hpp  vertexArray.cpp  vertexArray.hpp  vertexBuffer.cpp  vertexBuffer.hpp
Freeze/src/math/: math.hpp
Freeze/src/resources/shaders/basic/: fragment.glsl  vertex.glsl
Freeze/src/resources/shaders/lighting_0/source/: fragment.glsl  vertex.glsl
Sandbox/: CMakeLists.txt
Sandbox/src/: SandboxApp.cpp
